--- a/web/app/views/mod/header.html
+++ b/web/app/views/mod/header.html
@@ -12,7 +12,7 @@
 	            </div>
 	            <div class="collapse navbar-collapse js-navbar-collapse">
 	            	<ul class="nav navbar-nav navbar-left">
-	            		<li><a class="system-logo" href="#/setting"><!--<img alt="LOGO" src="src/images/logo.png" />-->美创某某管理平台</a></li>
+	            		<li><a class="system-logo" href="#/"><!--<img alt="LOGO" src="src/images/logo.png" />-->美创某某管理平台</a></li>
             		</ul>
 	                <ul class="nav navbar-nav navbar-left">
 			            <li class="top-list-item current">
