--- a/web/app/views/setting/subNav.html
+++ b/web/app/views/setting/subNav.html
@@ -1,10 +1,10 @@
 <!-- 子菜单 -->
 <div class="list-group menu-list" style="height:{{menuHeight}}px;overflow-y:auto;">
-	<a href="#/setting/roles" role="button" class="list-group-item menu-item j-submenu" ng-class="{'active':pathStr.indexOf('roles')>-1}" ng-show="roleId === -1"><i class="icon icon-lr"></i>角色查看</a>
-	<a href="#/setting/users" role="button" class="list-group-item menu-item j-submenu" ng-class="{'active':pathStr.indexOf('users')>-1}" ng-show="roleId === -1"><i class="icon icon-um"></i>用户配置</a>
-  	<a href="#/setting/safety" role="button" class="list-group-item menu-item j-submenu" ng-class="{'active':pathStr.indexOf('safety')>-1}" ng-show="roleId === -1"><i class="icon icon-md"></i>安全配置</a>
-    <a href="#/setting/audit" role="button" class="list-group-item menu-item j-submenu" ng-class="{'active':pathStr.indexOf('auditIndex')>-1}"  ng-show="roleId === -2"><i class="icon icon-lr"></i>操作日志审计</a>
-  	<a href="#/setting/assess" role="button" class="list-group-item menu-item j-submenu" ng-class="{'active':pathStr.indexOf('assess')>-1}" ng-show="roleId === -3"><i class="icon icon-mt"></i>审核操作</a>
+	<a href="#/setting/roles" role="button" class="list-group-item menu-item j-submenu" ng-class="{'active':pathStr.indexOf('roles')>-1}" ng-show="roleId === -1"><i class="icon icon-lr"></i>角色管理</a>
+	<a href="#/setting/users" role="button" class="list-group-item menu-item j-submenu" ng-class="{'active':pathStr.indexOf('users')>-1}" ng-show="roleId === -1"><i class="icon icon-um"></i>用户管理</a>
+  	<a href="#/setting/safety" role="button" class="list-group-item menu-item j-submenu" ng-class="{'active':pathStr.indexOf('safety')>-1}" ng-show="roleId === -1"><i class="icon icon-md"></i>安全管理</a>
+    <a href="#/setting/auditIndex" role="button" class="list-group-item menu-item j-submenu" ng-class="{'active':pathStr.indexOf('auditIndex')>-1}"  ng-show="roleId === -2"><i class="icon icon-lr"></i>操作日志审计</a>
+  	<a href="#/setting/assess" role="button" class="list-group-item menu-item j-submenu" ng-class="{'active':pathStr.indexOf('assess')>-1}" ng-show="roleId === -3"><i class="icon icon-mt"></i>审核管理</a>
   	<a href="#/setting/systemAlarm" role="button" class="list-group-item menu-item j-submenu" ng-class="{'active':pathStr.indexOf('systemAlarm')>-1}" ng-show="roleId === -2"><i class="icon icon-tw"></i>系统告警审计</a>
   	<a href="#/setting/activeUser" role="button" class="list-group-item menu-item j-submenu" ng-class="{'active':pathStr.indexOf('activeUser')>-1}"  ng-show="roleId === -2"><i class="icon icon-jm"></i>在线用户审计</a>
   	<a href="#/setting/auditAnaly" role="button" class="list-group-item menu-item j-submenu" ng-class="{'active':pathStr.indexOf('auditAnaly')>-1}"  ng-show="roleId === -2"><i class="icon icon-sm"></i>日志审计分析</a>
